сделал аналогично для сделок
